--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.rtl-body {
+  direction: rtl;
+}
+
+.ltr-body {
+  direction: ltr;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -32,6 +40,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
